src/core/config/transformer/snapshots/tailcall__core__config__transformer__improve_type_names__test__exclude_provided_types.snap
---
source: src/core/config/transformer/improve_type_names.rs
expression: config.to_sdl()
---
type Post {
  id: Int
}

type Query {
  userInfo: UserInfo
}

type UserInfo {
  userPosts: [Posts]
}
