src/core/config/transformer/snapshots/tailcall__core__config__transformer__improve_type_names__test__prioritize_user_given_names.snap
---
source: src/core/config/transformer/improve_type_names.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Post {
  id: Int
}

type Query {
  userInfo: UserInfo
}

type UserInfo {
  userPosts: [Posts]
}
