src/core/config/transformer/snapshots/tailcall__core__config__transformer__improve_type_names__test__type_name_generator.snap
---
source: src/core/config/transformer/improve_type_names.rs
expression: transformed_config.to_sdl()
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream(baseURL: "http://example.typicode.com", httpCache: 42) {
  query: Query
}

type Color {
  colors: [T3]
  isColorPageExists: Boolean
  isColorsImageAvailable: Boolean
}

type Query {
  f1: T1 @http(path: "/colors")
}

type T1 {
  color: Color
}

type T3 {
  hexCode: String
  name: String
}
