src/core/config/transformer/snapshots/tailcall__core__config__transformer__improve_type_names__test__type_name_generator_transform.snap
---
source: src/core/config/transformer/improve_type_names.rs
expression: transformed_config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  f1: [F1] @http(url: "https://jsonplaceholder.typicode.com/users")
}

type F1 {
  address: Address
  company: Company
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}

type Geo {
  lat: String
  lng: String
}

type Address {
  city: String
  geo: Geo
  street: String
  suite: String
  zipcode: String
}

type Company {
  bs: String
  catchPhrase: String
  name: String
}
