src/core/config/transformer/snapshots/tailcall__core__config__transformer__improve_type_names__test__type_name_generator_with_cyclic_types.snap
---
source: src/core/config/transformer/improve_type_names.rs
expression: transformed_config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  f1: [Author] @http(url: "https://jsonplaceholder.typicode.com/users")
}

type Author {
  id: ID!
  name: String!
  posts: [Post]!
}

type Post {
  author: Author!
  content: String!
  cycle: Cycle
  id: ID!
  title: String!
}

type Cycle {
  cycle: Cycle
  id: ID!
}
