src/core/config/transformer/snapshots/tailcall__core__config__transformer__improve_type_names__test__type_names_transformation_without_prioritization.snap
---
source: src/core/config/transformer/improve_type_names.rs
expression: transformed_config.to_sdl()
---
schema @server(port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 100, headers: []}, httpCache: 42) {
  query: Query
}

type Query {
  post(id: ID!): TodoPost @http(path: "/posts")
  todos: [Todo] @http(path: "/todos")
  users: [User] @http(path: "/users")
}

type Todo {
  id: ID
  todoPost: TodoPost
}

type TodoPost {
  body: String
  id: ID
  title: String
}

type User {
  id: ID
  name: String
  relatedPosts: [TodoPost] @http(path: "/posts", query: [{key: "id", value: "{{.value.id}}"}])
}
